src/test/ui/marker_trait_attr/overlap-marker-trait.stderr
error[E0277]: the trait bound `NotDebugOrDisplay: Marker` is not satisfied
  --> $DIR/overlap-marker-trait.rs:28:17
   |
LL |     is_marker::<NotDebugOrDisplay>();
   |                 ^^^^^^^^^^^^^^^^^ the trait `Marker` is not implemented for `NotDebugOrDisplay`
   |
note: required by a bound in `is_marker`
  --> $DIR/overlap-marker-trait.rs:16:17
   |
LL | fn is_marker<T: Marker>() { }
   |                 ^^^^^^ required by this bound in `is_marker`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
